Add fix button
